syntax = "proto3";

package sf.jupiter.v1;

option go_package = "github.com/JupiterExchange/substreams/sf/jupiter/v1;jupiterv1";

// Parsed Jupiter swap data with amounts
message SwapData {
  string transaction_id = 1;
  string program_id = 2;
  string input_mint = 3;
  string output_mint = 4;
  uint64 amount_in = 5;
  uint64 amount_out = 6;
  uint64 minimum_amount_out = 7;
  string user_wallet = 8;
  uint64 slot = 9;
  uint64 block_time = 10;
  string swap_type = 11;  // "route", "shared_accounts_route", "exact_out", etc.
}

message SwapDataList {
  repeated SwapData swaps = 1;
  uint64 total_volume_in = 2;
  uint64 total_volume_out = 3;
  uint32 swap_count = 4;
}

message TradingData {
  string program_id = 1;
  string transaction_id = 2;
  repeated string accounts = 3;
  bytes data = 4;
  uint64 slot = 5;
  uint64 block_time = 6;
  // Parsed swap fields
  uint64 amount_in = 7;
  uint64 amount_out = 8;
  string input_mint = 9;
  string output_mint = 10;
  string user_wallet = 11;
}

message TokenPrice {
  string mint_address = 1;
  double price_usd = 2;
  double volume_24h = 3;
  double price_change_24h = 4;
  uint64 slot = 5;
}

message EnrichedAccount {
  string address = 1;
  string owner = 2;
  string mint = 3;
}

message AccountOwnerRecord {
  bytes account = 1;
  bytes mint = 2;
  bytes owner = 3;
}

message AccountOwnerRecords {
  repeated AccountOwnerRecord records = 1;
}

message TradingDataList {
  repeated TradingData items = 1;
  uint64 total_volume = 2;
  uint32 swap_count = 3;
}

message TokenPriceList {
  repeated TokenPrice items = 1;
}

message JupiterInstruction {
  string program_id = 1;
  string transaction_id = 2;
  repeated EnrichedAccount accounts = 3;
  bytes data = 4;
  uint64 slot = 5;
  uint64 block_time = 6;
  // Parsed swap data
  uint64 amount_in = 7;
  uint64 amount_out = 8;
  string input_mint = 9;
  string output_mint = 10;
}

message JupiterInstructions {
  repeated JupiterInstruction instructions = 1;
  uint64 total_volume = 2;
  uint32 instruction_count = 3;
}

message ProgramStat {
  string program_id = 1;
  uint64 instruction_count = 2;
  uint64 total_volume = 3;
}

message JupiterAnalytics {
  uint64 total_instructions = 1;
  uint64 unique_accounts = 2;
  uint64 unique_mints = 3;
  repeated ProgramStat top_programs = 4;
  uint64 total_volume = 5;
  uint64 total_swaps = 6;
}
